--- a/index.html
+++ b/index.html
@@ -1,6 +1,23 @@
-<div id="message"></div>
-<div id="towers">
-    <div class="tower"></div>
-    <div class="tower"></div>
-    <div class="tower"></div>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tower of Hanoi</title>
+    <script defer src="./script.js"></script>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <div id="message"></div>
+  <div id="towers">
+      <div class="tower"></div>
+      <div class="tower"></div>
+      <div class="tower"></div>
+    </div>  
+</body>
+
+</html>
+
+
