--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Tower of Hanoi</title>
     <script defer src="./script.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href = "https://fonts.googleapis.com/css2?family=Gothic+A1">
 </head>
 <header>Tower of Hanoi</header>
 <body>
