fixed disc sizing

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
     
     <!-- The game game will have three towers -->
     <div class ="towers">
-      <div id="towerA" class="tower"><v-r></v-r></div>
+      <div id="towerA" class="tower"></div>
       <div id="towerB" class="tower"></div>
       <div id="towerC" class="tower"></div>
     </div>  
     
     <!-- Reset button resets the game -->
-    <button class="reset">Reset</div>
+    <button class="reset">Reset</button>
   </div>
   
 
