--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <div class="board">
     <!-- This is the message that will be populated at the top of the game  -->
     <div id="message">This will be the message displayed.</div>
+    <!-- Set display = none in CSS, to make invisible. Then onclick, set display to inline. So if move can't be done, set display to inline -->
     
     <!-- The game game will have three towers -->
     <div class ="towers">
