--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
     <script defer src="./script.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href = "https://fonts.googleapis.com/css2?family=Gothic+A1">
+    <link rel="stylesheet" href = "https://fonts.googleapis.com/css2?family=DM+Sans">
+    <link rel="stylesheet" href = "https://fonts.googleapis.com/css2?family=Gothic+A1">
+
 </head>
 <header>
-  Tower of Hanoi
+  <div class="name"><h1>Tower of Hanoi</h1></div> 
 </header>
 <body>
   <div class="board">
     <!-- This is the message that will be populated at the top of the game  -->
-    <div id="message">This will be the message displayed.</div>
+    <div id="message"></div>
     <!-- Set display = none in CSS, to make invisible. Then onclick, set display to inline. So if move can't be done, set display to inline -->
     
     <!-- The game game will have three towers -->
@@ -26,7 +29,9 @@
     </div>  
     
     <!-- Reset button resets the game -->
-    <button class="reset">Reset</button>
+    <div class='reset-section'>
+      <button class="reset-button">RESET</button>
+    </div>
   </div>
 
   <div class="difficulty">
@@ -41,6 +46,7 @@
           <option value="8">8</option>
       </select>
     </p>
+    <div class="minimum"></div>
   </div>
   
 
