--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       
       <!-- The game game will have three towers -->
       <div class ="towers">
-        <div id="towerA" class="tower"></div>
-        <div id="towerB" class="tower"></div>
-        <div id="towerC" class="tower"></div>
+        <div id="towerA" class="tower"><span></span></div>
+        <div id="towerB" class="tower"><span></span></div>
+        <div id="towerC" class="tower"><span></span></div>
       </div>  
       
       <!-- Reset button resets the game -->
