--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     </div
     ><div class="minimum"></div>
     
-    <div>
+    <div id="solution">
       <button class="solve">Solve</button>
     </div>
 
